--- a/tvOSVideoApp/Base.lproj/Main.storyboard
+++ b/tvOSVideoApp/Base.lproj/Main.storyboard
@@ -1,25 +1,133 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="6185.10" systemVersion="14A360a" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="NO" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" initialViewController="PPv-o2-ALp">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6181.2"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Player View Controller-->
+        <scene sceneID="Dcn-k9-RrE">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="tT5-CS-UGL" customClass="PlayerViewController" customModule="tvOSVideoApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="gel-gv-Odn"/>
+                        <viewControllerLayoutGuide type="bottom" id="rmg-R5-N1l"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                    <view key="view" contentMode="scaleToFill" id="zgt-rw-uos">
+                        <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <animations/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e0l-NL-9mw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--TV-->
+        <scene sceneID="qwR-QE-o0F">
+            <objects>
+                <viewController id="hcR-aY-TNh" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ogH-q0-HIh"/>
+                        <viewControllerLayoutGuide type="bottom" id="YRi-Dh-BNz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="voZ-Eh-9Ph">
+                        <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="TV" id="ftS-TR-gjs"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wka-Vz-XKb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-329" y="1083"/>
+        </scene>
+        <!--Movies-->
+        <scene sceneID="gXU-jt-qDi">
+            <objects>
+                <viewController id="Zuh-zE-HUv" customClass="MoviesViewController" customModule="tvOSVideoApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cu2-ER-Mx1"/>
+                        <viewControllerLayoutGuide type="bottom" id="Eex-ZX-SG7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="NIw-o5-zeH">
+                        <rect key="frame" x="0.0" y="140" width="1920" height="940"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="um1-c3-fUk">
+                                <rect key="frame" x="0.0" y="0.0" width="1920" height="940"/>
+                                <animations/>
+                            </scrollView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="EeG-Fr-9Kf">
+                                <rect key="frame" x="0.0" y="0.0" width="1920" height="400"/>
+                                <animations/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="sOa-HP-QBe">
+                                    <size key="itemSize" width="747" height="484"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="collectionCell" id="iSA-ju-aie" customClass="CollectionViewCell" customModule="tvOSVideoApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="157" height="134"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="157" height="134"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="400" verticalHuggingPriority="251" image="1.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="h6U-Z5-OUT">
+                                                    <rect key="frame" x="0.0" y="0.0" width="640" height="400"/>
+                                                    <animations/>
+                                                </imageView>
+                                            </subviews>
+                                            <animations/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <animations/>
+                                        <size key="customSize" width="640" height="400"/>
+                                        <connections>
+                                            <outlet property="imageView" destination="h6U-Z5-OUT" id="Ing-5H-fFg"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="Zuh-zE-HUv" id="XMm-aZ-Igf"/>
+                                    <outlet property="delegate" destination="Zuh-zE-HUv" id="ss8-iM-B8k"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <animations/>
+                    </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <tabBarItem key="tabBarItem" title="Movies" id="fat-X3-ECk"/>
+                    <connections>
+                        <outlet property="collectionView1" destination="EeG-Fr-9Kf" id="Rn5-g9-ASF"/>
+                        <outlet property="scrollView" destination="um1-c3-fUk" id="ONd-PF-wof"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yNQ-pd-rdF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-329" y="-58"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Fq6-Oa-Jp2">
+            <objects>
+                <tabBarController id="PPv-o2-ALp" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="3yN-u2-hjf">
+                        <rect key="frame" x="0.0" y="0.0" width="1920" height="140"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Zuh-zE-HUv" kind="relationship" relationship="viewControllers" id="VUe-kv-XfA"/>
+                        <segue destination="hcR-aY-TNh" kind="relationship" relationship="viewControllers" id="q5e-27-rec"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0ha-Ec-VcY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2469" y="513"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="1.jpg" width="599" height="887"/>
+    </resources>
 </document>
